# ceres-solver

./: CMakeLists.txt  CeresConfig.cmake.in
.github/workflows/: android.yml  linux.yml  macos.yml  windows.yml
cmake/: AppendTargetProperty.cmake  CreateCeresConfig.cmake  DetermineGflagsNamespace.cmake  FindAccelerateSparse.cmake  FindGlog.cmake  FindSphinx.cmake  FindSuiteSparse.cmake  ReadCeresVersionFromSource.cmake  config.h.in
docs/source/: CMakeLists.txt
examples/: CMakeLists.txt  ellipse_approximation.cc  libmv_bundle_adjuster.cc
examples/sampled_function/: CMakeLists.txt
examples/slam/pose_graph_2d/: CMakeLists.txt
examples/slam/pose_graph_3d/: CMakeLists.txt
include/ceres/: conditioned_cost_function.h  cost_function.h  covariance.h  crs_matrix.h  dynamic_cost_function.h  dynamic_cost_function_to_functor.h  gradient_checker.h  gradient_problem.h  gradient_problem_solver.h  iteration_callback.h  jet.h  jet_fwd.h  local_parameterization.h  loss_function.h  normal_prior.h  numeric_diff_options.h  problem.h  solver.h  types.h
include/ceres/codegen/internal/: expression_graph.h
include/ceres/internal/: expression.h  expression_graph.h  expression_ref.h  jet_traits.h  port.h
internal/ceres/: CMakeLists.txt  array_utils.h  autodiff_test.cc  block_jacobi_preconditioner.h  block_random_access_dense_matrix.h  block_random_access_diagonal_matrix.h  block_random_access_matrix.h  block_random_access_sparse_matrix.h  block_sparse_matrix.cc  block_sparse_matrix.h  block_structure.h  bundle_adjustment_test.cc  canonical_views_clustering.h  cgnr_solver.h  compressed_col_sparse_matrix_utils.h  compressed_row_sparse_matrix.cc  compressed_row_sparse_matrix.h  compressed_row_sparse_matrix_test.cc  conjugate_gradients_solver.h  context_impl.cc  context_impl.h  coordinate_descent_minimizer.cc  corrector.h  corrector_test.cc  cost_function.cc  covariance_impl.cc  covariance_impl.h  covariance_test.cc  cuda_block_structure.cc  cxsparse.h  dense_normal_cholesky_solver.h  dense_qr.h  dense_qr_solver.h  dense_sparse_matrix.cc  dense_sparse_matrix.h  detect_structure.h  dogleg_strategy.cc  dogleg_strategy.h  dynamic_compressed_row_sparse_matrix.h  dynamic_cost_function_to_functor.cc  (+67 more)
internal/ceres/generated_bundle_adjustment_tests/: ba_sparseschur_eigensparse_auto_test.cc
internal/ceres/gmock/: mock-log.h
internal/ceres/gtest/: gtest.h
